@@ -3,9 +3,11 @@ package org.ads.client;
 import org.ads.client.map_parser.MapParser;
 import org.ads.client.entities.ConnectedPlayer;
 import org.ads.client.entities.Player;
+import org.ads.statistics.ResourceMonitor;
 
 import javax.swing.*;
-import java.awt.*;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -13,7 +15,7 @@ import java.io.PrintWriter;
 import java.net.Socket;
 import java.util.ArrayList;
 
-public class GamePanel extends JPanel implements Runnable {
+public class GamePanel implements Runnable {
     public CollisionHandler collisionHandler ;
     // Screen Settings
     int originalTileSize;
@@ -26,7 +28,7 @@ public class GamePanel extends JPanel implements Runnable {
     KeyHandler keyHandler = new KeyHandler();
 
     // Map parser
-    MapParser currentMap = new MapParser("src/main/resources/maps/map.json", this); // /maps/map.json
+    MapParser currentMap = new MapParser("/maps/map.json", this); // /maps/map.json
 
     // World settings (initialised at current.getMapInfo(this) in constructor)
     public int maxWorldCol;
@@ -36,7 +38,7 @@ public class GamePanel extends JPanel implements Runnable {
 
     // Entities
     public Player player; // Initialised in constructor
-    ArrayList<ConnectedPlayer> connectedPlayers = new ArrayList<>();
+    private ArrayList<ConnectedPlayer> connectedPlayers = new ArrayList<>();
 
     // Thread for game loop
     Thread gameThread;
@@ -53,6 +55,7 @@ public class GamePanel extends JPanel implements Runnable {
     public GamePanel(String name, String skin, int maxScreenCol, int maxScreenRow) throws IOException {
         this.maxScreenCol = maxScreenCol;
         this.maxScreenRow = maxScreenRow;
+
         ArrayList<Integer> parameters = currentMap.getMapInfo();
 
         maxWorldCol = parameters.get(0);
@@ -64,14 +67,12 @@ public class GamePanel extends JPanel implements Runnable {
         screenWidth = tileSize * this.maxScreenCol;
         screenHeight = tileSize * this.maxScreenRow;
 
-        this.setPreferredSize(new Dimension(screenWidth, screenHeight));
-        this.setBackground(Color.black);
-        this.setDoubleBuffered(true);
-        this.addKeyListener(keyHandler);
-        this.setFocusable(true);
-
         player = new Player(this, keyHandler, name, skin);
 
+        currentMap.loadMap();
+        collisionHandler = new CollisionHandler(this);
+    }
+    public void setupGame() {
         try {
             // Communication
             String HOST = "localhost";
@@ -81,32 +82,54 @@ public class GamePanel extends JPanel implements Runnable {
             output = new PrintWriter(socket.getOutputStream(), true);
             output.println("JOIN " + player.name + " " + player.worldX + " " + player.worldY + " " +player.speed + " " + player.direction + " " +player.skin);
             InputThread inputThread = new InputThread(input, this);
-            Thread inputThreadThread = new Thread(inputThread);
-            inputThreadThread.start();
+            Thread.ofVirtual().start(inputThread);
         } catch (IOException e) {
             System.err.println("Erreur lors de la connexion au serveur.");
             System.exit(1);
         }
-
-        currentMap.loadMap();
-        collisionHandler = new CollisionHandler(this);
-
     }
+    public void startGame() throws IOException {
+        // Start Stats Generator
+        ResourceMonitor resourceMonitor = new ResourceMonitor("stats/" + player.name + ".csv");
+        Thread resourceMonitorThread = new Thread(resourceMonitor);
+        resourceMonitorThread.start();
 
-    public void setupGame() {
-    }
-
-    public void startGame(){
+        // Start Game Thread
         gameThread = new Thread(this);
         gameThread.start();
 
-        ServerUpdateThread serverUpdateThread = new ServerUpdateThread(this);
-        new Thread(serverUpdateThread).start();
-    }
+        // Start message Sender Thread
+        OutputThread outputThread = new OutputThread(this);
+        Thread.ofVirtual().start(outputThread);
 
+        // Start Rendering Thread
+        RenderingThread renderingThread = new RenderingThread(this);
+
+        JFrame window = new JFrame();
+        window.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+        window.addWindowListener(new WindowAdapter() {
+            @Override
+            public void windowClosing(WindowEvent event) {
+                close();
+            }
+        });
+
+        window.setResizable(false);
+        window.setTitle("Client : " + player.name);
+
+        window.add(renderingThread);
+
+        window.pack();
+
+        window.setLocationRelativeTo(null);
+        window.setVisible(true);
+
+        Thread.ofVirtual().start(renderingThread);
+
+    }
     @Override
     public void run() {
-        double drawInterval = 1000000000 /FPS;
+        double drawInterval = 1000000000.0 /FPS;
         double delta = 0;
         long lastTime = System.nanoTime();
         long currentTime;
@@ -118,44 +141,31 @@ public class GamePanel extends JPanel implements Runnable {
 
             if (delta >= 1) {
                 update();
-                repaint();
                 delta--;
             }
         }
-
     }
-
     private void update() {
         player.update();
-    }
+        player.updateAnimation();
 
-    public void paintComponent(Graphics graphics){
-        super.paintComponent(graphics);
-        Graphics2D graphics2D = (Graphics2D)graphics;
-
-        // Draw map
-        currentMap.draw(graphics2D);
-        // Draw player
-        player.draw(graphics2D);
-
-        // Draw connected players
-        if (connectedPlayers != null){
-            for (ConnectedPlayer connectedPlayer: connectedPlayers) {
-                connectedPlayer.draw(graphics2D);
-            }
+        for (ConnectedPlayer connectedPlayer:connectedPlayers) {
+            connectedPlayer.updateAnimation();
+            connectedPlayer.predict();
         }
-        graphics2D.dispose();
     }
     public void close(){
         output.println("QUIT");
         output.close();
     }
-
+    public ArrayList<ConnectedPlayer> getConnectedPlayers() {
+        return new ArrayList<>(connectedPlayers);
+    }
     public void setConnectedPlayers(ArrayList<ConnectedPlayer> connectedPlayers) {
         this.connectedPlayers = connectedPlayers;
     }
 
-    public ArrayList<ConnectedPlayer> getConnectedPlayers(){
-        return connectedPlayers;
+    public Player getPlayer() {
+        return new Player(this ,player);
     }
 }
